--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -3097,7 +3097,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .sectionTopSerchMap__list {
-    background-image: url("./images/ptn_map_japan.png");
+    background-image: url("./ptn_map_japan.png");
     background-repeat: no-repeat;
     background-size: 370px 270px;
     height: 270px;
